新增取樣頻率測定Function(User可呼叫)

--- a/gpm_vibration_module_api/gpm_vibration_module_api.csproj
+++ b/gpm_vibration_module_api/gpm_vibration_module_api.csproj
@@ -68,6 +68,7 @@
     <Compile Include="sys\Utility.cs" />
     <Compile Include="Tools\ConverterTools.cs" />
     <Compile Include="Tools\Logger.cs" />
+    <Compile Include="Tools\Sampling_Rate_Calculator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
