完成模式切換功能 變更版號為1.3.0

--- a/gpm_vibration_module_api/gpm_vibration_module_api.csproj
+++ b/gpm_vibration_module_api/gpm_vibration_module_api.csproj
@@ -51,6 +51,8 @@
   <ItemGroup>
     <Compile Include="clsEnum.cs" />
     <Compile Include="clsErrorCode.cs" />
+    <Compile Include="ClsParamSetTaskObj.cs" />
+    <Compile Include="DAQMode.cs" />
     <Compile Include="DataSet.cs" />
     <Compile Include="FftSharp\Complex.cs" />
     <Compile Include="FftSharp\Experimental.cs" />
