--- a/gpm_vibration_module_api/gpm_vibration_module_api.csproj
+++ b/gpm_vibration_module_api/gpm_vibration_module_api.csproj
@@ -77,12 +77,7 @@
     <Compile Include="DAQMode.cs" />
     <Compile Include="DataSet.cs" />
     <Compile Include="Enviroment.cs" />
-    <Compile Include="FftSharp\Complex.cs" />
-    <Compile Include="FftSharp\Experimental.cs" />
-    <Compile Include="FftSharp\Pad.cs" />
-    <Compile Include="FftSharp\SampleData.cs" />
-    <Compile Include="FftSharp\Transform.cs" />
-    <Compile Include="FftSharp\Window.cs" />
+    <Compile Include="GpmMath\Transform.cs" />
     <Compile Include="GpmMath\FFT.cs" />
     <Compile Include="GpmMath\Numeric.cs" />
     <Compile Include="GpmMath\Window.cs" />
@@ -109,6 +104,7 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
