讓新舊命名空間都可以使用

--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,128 @@ project.lock.json
 #####
 # End of core ignore list, below put you custom 'per project' settings (patterns or path)
 #####
+/ConsoleExample/App.config
+/ConsoleExample/ConsoleExample.csproj
+/ConsoleExample/Program.cs
+/ConsoleExample/Properties/AssemblyInfo.cs
+/ConsoleExample/gpm_vibration_module_api.dll
+/gpm_vibration_module_api.Doc/Class1.cs
+/gpm_vibration_module_api.Doc/Properties/AssemblyInfo.cs
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.CodeError.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Data.DataSet.AxisDoubleValue.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Data.DataSet.AxisListValue.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Data.DataSet.clsAcc.States.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Data.DataSet.clsAcc.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Data.DataSet.clsFFTData.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Data.DataSet.clsOtherFeatures.clsAccRMS.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Data.DataSet.clsOtherFeatures.clsEnergy.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Data.DataSet.clsOtherFeatures.clsP2p.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Data.DataSet.clsOtherFeatures.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Data.DataSet.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Data.ParticleDataSet.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Data.UVDataSet.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Data.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.GpmMath.FFT.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.GpmMath.Numeric.Complex.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.GpmMath.Numeric.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.GpmMath.Stastify.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.GpmMath.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.MODULE_TYPE.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Module.ModulesServer.ConnectObj.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Module.ModulesServer.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Module.TCPIPModule.SocketTCPIP.State.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Module.TCPIPModule.SocketTCPIP.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Module.TCPIPModule.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Module.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.ParticalSensor.Concentration.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.ParticalSensor.PARTICLE_DATATYPE.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.ParticalSensor.PARTICLE_SIZE.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.ParticalSensor.ParticleModuleAPI.DataTemporary.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.ParticalSensor.ParticleModuleAPI.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.ParticalSensor.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.SocketState.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Tools.ConverterTools.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Tools.EthernetControllerTool.clsSckUDP.StateObject.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Tools.EthernetControllerTool.clsSckUDP.clsDataArrival.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Tools.EthernetControllerTool.clsSckUDP.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Tools.EthernetControllerTool.clsSettingItems.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Tools.EthernetControllerTool.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Tools.EthernetControllerTool.sSEC.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Tools.FirmwareBurning.PARAM.POTOCOL.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Tools.FirmwareBurning.PARAM.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Tools.FirmwareBurning.ProcessState.STEP.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Tools.FirmwareBurning.ProcessState.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Tools.FirmwareBurning.RESULT.FAIL_REASON.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Tools.FirmwareBurning.RESULT.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Tools.FirmwareBurning.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Tools.LogFun.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Tools.ModuleWhoAreYou.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Tools.Sampling_Rate_Calculator.clsResult.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Tools.Sampling_Rate_Calculator.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Tools.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.UVSensor.UVSensorAPI.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.UVSensor.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.VibrationSensor.ClsParamSetTaskObj.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.VibrationSensor.DAQMode.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.VibrationSensor.Extensions.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.VibrationSensor.GPMModuleAPI.Enum_AccGetMethod.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.VibrationSensor.GPMModuleAPI.Sampling_Rate_Cal_Result.ERROR_CODE.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.VibrationSensor.GPMModuleAPI.Sampling_Rate_Cal_Result.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.VibrationSensor.GPMModuleAPI.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.VibrationSensor.MeasureOption.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.VibrationSensor.WINDOW.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.VibrationSensor.clsModuleSettings.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.VibrationSensor.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Visualize.ParticleModuleView.DetailType.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Visualize.ParticleModuleView.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.Visualize.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.clsEnum.Module_Setting_Enum.DATA_LENGTH.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.clsEnum.Module_Setting_Enum.MEASURE_RANGE.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.clsEnum.Module_Setting_Enum.ODR.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.clsEnum.Module_Setting_Enum.SENSOR_TYPE.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.clsEnum.Module_Setting_Enum.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.clsEnum.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.staKeypro.CHECK_RESULT.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.staKeypro.KeyProCheckStatus.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.staKeypro.PurchaseCode.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.staKeypro.Ry4ErrCode.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.staKeypro.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.sys.Settings_Ctrl.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.sys.Settings_Items.html
+/gpm_vibration_module_api.Doc/_site/api/gpm_module_api.sys.html
+/gpm_vibration_module_api.Doc/_site/api/index.html
+/gpm_vibration_module_api.Doc/_site/api/toc.html
+/gpm_vibration_module_api.Doc/_site/articles/intro.html
+/gpm_vibration_module_api.Doc/_site/articles/toc.html
+/gpm_vibration_module_api.Doc/_site/favicon.ico
+/gpm_vibration_module_api.Doc/_site/fonts/glyphicons-halflings-regular.eot
+/gpm_vibration_module_api.Doc/_site/fonts/glyphicons-halflings-regular.svg
+/gpm_vibration_module_api.Doc/_site/fonts/glyphicons-halflings-regular.ttf
+/gpm_vibration_module_api.Doc/_site/fonts/glyphicons-halflings-regular.woff
+/gpm_vibration_module_api.Doc/_site/fonts/glyphicons-halflings-regular.woff2
+/gpm_vibration_module_api.Doc/_site/index.html
+/gpm_vibration_module_api.Doc/_site/logo.svg
+/gpm_vibration_module_api.Doc/_site/manifest.json
+/gpm_vibration_module_api.Doc/_site/search-stopwords.json
+/gpm_vibration_module_api.Doc/_site/styles/docfx.css
+/gpm_vibration_module_api.Doc/_site/styles/docfx.js
+/gpm_vibration_module_api.Doc/_site/styles/docfx.vendor.css
+/gpm_vibration_module_api.Doc/_site/styles/docfx.vendor.js
+/gpm_vibration_module_api.Doc/_site/styles/lunr.js
+/gpm_vibration_module_api.Doc/_site/styles/lunr.min.js
+/gpm_vibration_module_api.Doc/_site/styles/main.css
+/gpm_vibration_module_api.Doc/_site/styles/main.js
+/gpm_vibration_module_api.Doc/_site/styles/search-worker.js
+/gpm_vibration_module_api.Doc/_site/toc.html
+/gpm_vibration_module_api.Doc/_site/xrefmap.yml
+/gpm_vibration_module_api.Doc/api/index.md
+/gpm_vibration_module_api.Doc/articles/intro.md
+/gpm_vibration_module_api.Doc/articles/toc.md
+/gpm_vibration_module_api.Doc/docfx.json
+/gpm_vibration_module_api.Doc/gpm_vibration_module_api.Doc.csproj
+/gpm_vibration_module_api.Doc/index.md
+/gpm_vibration_module_api.Doc/log.txt
+/gpm_vibration_module_api.Doc/packages.config
+/gpm_vibration_module_api.Doc/template/darkfx
+/gpm_vibration_module_api.Doc/toc.yml
