--- a/gpm_vibration_module_api/gpm_vibration_module_api.csproj
+++ b/gpm_vibration_module_api/gpm_vibration_module_api.csproj
@@ -86,6 +86,11 @@
     <Compile Include="GpmMath\Window.cs" />
     <Compile Include="GPMModuleAPI.cs" />
     <Compile Include="KeyproMdule.cs" />
+    <Compile Include="License\CHECK_RESULT.cs" />
+    <Compile Include="License\GPMLicenseKey.cs" />
+    <Compile Include="License\ICheckAction.cs" />
+    <Compile Include="License\LicenseCheck.cs" />
+    <Compile Include="License\LicenseCheckState.cs" />
     <Compile Include="LowPassFilter.cs" />
     <Compile Include="MeasureOption.cs" />
     <Compile Include="Module\clsModuleBase.cs" />
