Add HighPassFilter/ 修正HB LB組合 /新增Error Byte Check機制

--- a/gpm_vibration_module_api/gpm_vibration_module_api.csproj
+++ b/gpm_vibration_module_api/gpm_vibration_module_api.csproj
@@ -93,6 +93,7 @@
     <Compile Include="License\LicenseCheckState.cs" />
     <Compile Include="LowPassFilter.cs" />
     <Compile Include="MeasureOption.cs" />
+    <Compile Include="Module\AccelerometerSetting.cs" />
     <Compile Include="Module\clsModuleBase.cs" />
     <Compile Include="Module\clsModuleSettings.cs" />
     <Compile Include="Module\ModulesServer.cs" />
