--- a/gpm_vibration_module_apiTests1/gpm_vibration_module_apiTests1.csproj
+++ b/gpm_vibration_module_apiTests1/gpm_vibration_module_apiTests1.csproj
@@ -55,6 +55,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="Module\ClsModuleBaseTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UVSensor\UVSensorAPITests.cs" />
   </ItemGroup>
