bug fix/ modbus api部分方法改為非同步

--- a/gpm_vibration_module_api/gpm_vibration_module_api.csproj
+++ b/gpm_vibration_module_api/gpm_vibration_module_api.csproj
@@ -374,6 +374,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Visualize\ParticleModuleView.resx">
       <DependentUpon>ParticleModuleView.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
