--- a/gpm_vibration_module_apiTests1/gpm_vibration_module_apiTests1.csproj
+++ b/gpm_vibration_module_apiTests1/gpm_vibration_module_apiTests1.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>gpm_vibration_module_apiTests1</RootNamespace>
     <AssemblyName>gpm_vibration_module_apiTests1</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -19,6 +19,7 @@
     <TestProjectType>UnitTest</TestProjectType>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -55,6 +56,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="Modbus\GPMModbusAPITests.cs" />
     <Compile Include="Module\ClsModuleBaseTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UVSensor\UVSensorAPITests.cs" />
@@ -64,7 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\gpm_vibration_module_api\gpm_vibration_module_api.csproj">
-      <Project>{0D025F6E-4663-4821-A7EC-69FB7D5C8599}</Project>
+      <Project>{0d025f6e-4663-4821-a7ec-69fb7d5c8599}</Project>
       <Name>gpm_vibration_module_api</Name>
     </ProjectReference>
   </ItemGroup>
