修正一般版本DaqMode = High且DataLen>512時會有例外發生的BUG

--- a/gpm_vibration_module_apiTests/gpm_vibration_module_apiTests.csproj
+++ b/gpm_vibration_module_apiTests/gpm_vibration_module_apiTests.csproj
@@ -58,6 +58,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="GPMAPITests.cs" />
     <Compile Include="Modbus\GPMModbusAPITests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
