--- a/gpm_vibration_module_api/gpm_vibration_module_api.csproj
+++ b/gpm_vibration_module_api/gpm_vibration_module_api.csproj
@@ -332,20 +332,20 @@
     <Compile Include="License\LicenseCheck.cs" />
     <Compile Include="License\LicenseCheckState.cs" />
     <Compile Include="GpmMath\LowPassFilter.cs" />
-    <Compile Include="Modbus\Exceptions\Exceptions.cs" />
-    <Compile Include="Modbus\GPMModbusAPI.cs" />
-    <Compile Include="Modbus\ModbusClient.cs" />
-    <Compile Include="Modbus\ModbusServer.cs" />
-    <Compile Include="Modbus\StoreLogData.cs" />
+    <Compile Include="API\Modbus\Exceptions\Exceptions.cs" />
+    <Compile Include="API\Modbus\GPMModbusAPI.cs" />
+    <Compile Include="API\Modbus\ModbusClient.cs" />
+    <Compile Include="API\Modbus\ModbusServer.cs" />
+    <Compile Include="API\Modbus\StoreLogData.cs" />
     <Compile Include="ModuleSerialPortBase.cs" />
     <Compile Include="Module\AccelerometerSetting.cs" />
     <Compile Include="Module\ModulesServer.cs" />
     <Compile Include="Module\TCPIPModule.cs" />
     <Compile Include="NET\UDPServer.cs" />
     <Compile Include="NET\WebAPI.cs" />
-    <Compile Include="ParticalSensor\Concentration.cs" />
-    <Compile Include="ParticalSensor\ParticleModuleAPI.cs" />
-    <Compile Include="ParticalSensor\PARTICLE_Size.cs" />
+    <Compile Include="API\ParticalSensor\Concentration.cs" />
+    <Compile Include="API\ParticalSensor\ParticleModuleAPI.cs" />
+    <Compile Include="API\ParticalSensor\PARTICLE_Size.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sys\Setting_Items.cs" />
@@ -353,9 +353,9 @@
     <Compile Include="sys\Utility.cs" />
     <Compile Include="sys\Version.cs" />
     <Compile Include="TCPSocketBase.cs" />
-    <Compile Include="ThreeInOne\Emulator.cs" />
-    <Compile Include="ThreeInOne\SerialProtocolBase.cs" />
-    <Compile Include="ThreeInOne\ThreeInOneModuleAPI.cs" />
+    <Compile Include="API\ThreeInOne\Emulator.cs" />
+    <Compile Include="API\ThreeInOne\SerialProtocolBase.cs" />
+    <Compile Include="API\ThreeInOne\ThreeInOneModuleAPI.cs" />
     <Compile Include="Tools\ConverterTools.cs" />
     <Compile Include="Tools\EthernetControllerTool.cs" />
     <Compile Include="Tools\FirmwareBurning.cs" />
@@ -364,7 +364,7 @@
     <Compile Include="Tools\ModuleWhoAreYou.cs" />
     <Compile Include="Tools\Sampling_Rate_Calculator.cs" />
     <Compile Include="Tools\VersionManager.cs" />
-    <Compile Include="UVSensor\UVSensorAPI.cs" />
+    <Compile Include="API\UVSensor\UVSensorAPI.cs" />
     <Compile Include="Visualize\ParticleModuleView.cs">
       <SubType>UserControl</SubType>
     </Compile>
