--- a/gpm_vibration_module_api/gpm_vibration_module_api.csproj
+++ b/gpm_vibration_module_api/gpm_vibration_module_api.csproj
@@ -83,6 +83,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="API\Modbus\SerialPortManager.cs" />
     <Compile Include="DataSets\ThreeInOneModuleDataSet.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="GpmMath\Filters.cs" />
