優化三合一模組API/新增 YuelAPI(也是溫溼度模組)

--- a/gpm_vibration_module_api/gpm_vibration_module_api.csproj
+++ b/gpm_vibration_module_api/gpm_vibration_module_api.csproj
@@ -85,6 +85,7 @@
   <ItemGroup>
     <Compile Include="API\Modbus\TCPSocketManager.cs" />
     <Compile Include="API\Modbus\SerialPortManager.cs" />
+    <Compile Include="API\Modbus\YuelAPI.cs" />
     <Compile Include="API\ThreeInOne\Settings.cs" />
     <Compile Include="DataSets\ThreeInOneModuleDataSet.cs" />
     <Compile Include="Extensions.cs" />
