--- a/gpm_vibration_module_api/gpm_vibration_module_api.csproj
+++ b/gpm_vibration_module_api/gpm_vibration_module_api.csproj
@@ -341,6 +341,9 @@
     <Compile Include="API\Modbus\ModbusServer.cs" />
     <Compile Include="API\Modbus\StoreLogData.cs" />
     <Compile Include="ModuleSerialPortBase.cs" />
+    <Compile Include="Model\VibSensorParamSetting\ModuleSetting_HighClassVersion.cs" />
+    <Compile Include="Model\VibSensorParamSetting\ModuleSetting_485.cs" />
+    <Compile Include="Model\VibSensorParamSetting\ModuleSetting_GEN.cs" />
     <Compile Include="Module\AccelerometerSetting.cs" />
     <Compile Include="Module\ModulesServer.cs" />
     <Compile Include="Module\TCPIPModule.cs" />
@@ -387,6 +390,7 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
