--- a/gpm_vibration_module_apiTests/gpm_vibration_module_apiTests.csproj
+++ b/gpm_vibration_module_apiTests/gpm_vibration_module_apiTests.csproj
@@ -62,6 +62,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="GPMAPITests.cs" />
+    <Compile Include="GpmMath\ExtensionTests.cs" />
     <Compile Include="Modbus\GPMModbusAPITests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThreeInOne\ThreeInOneModuleAPITests.cs" />
