新增 Html工具 爬 Modbus控制器的設定值

--- a/gpm_vibration_module_api/gpm_vibration_module_api.csproj
+++ b/gpm_vibration_module_api/gpm_vibration_module_api.csproj
@@ -83,6 +83,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="API\Modbus\DeviceInfoGetFromHtmlPage.cs" />
     <Compile Include="API\Modbus\Register.cs" />
     <Compile Include="API\Modbus\TCPSocketManager.cs" />
     <Compile Include="API\Modbus\SerialPortManager.cs" />
