--- a/gpm_vibration_module_apiTests/gpm_vibration_module_apiTests.csproj
+++ b/gpm_vibration_module_apiTests/gpm_vibration_module_apiTests.csproj
@@ -61,6 +61,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="API\Modbus\DeviceInfoGetFromHtmlPageTests.cs" />
     <Compile Include="GPMAPITests.cs" />
     <Compile Include="GpmMath\ExtensionTests.cs" />
     <Compile Include="Modbus\GPMModbusAPITests.cs" />
